src/LoginForm/LoginForm.css
.login-form {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  width: 400px;
  margin: auto;
}

input,
select {
background: rgba(28, 26, 26, 0.9);
border: 2px solid rgba(255, 255, 255, 0.5);
box-sizing: border-box;
border-radius: 15px;
margin-bottom: 5%;
padding: 2% 3%;
width: 75%;
color: white !important;
font-size: 1.2em !important;
}

input:hover,
select:hover {
  border: 2px solid rgba(255, 255, 255);
}

::placeholder {
  color: white !important;
}

select {
  appearance: none;
  background-image: url('../assets/down-arrow.png');
  background-size: 15px 15px;
  background-position: 94% 50%;
  background-repeat: no-repeat;
}

button {
  color: white;
  width: 75%;
  padding: 2% 3%;
  background: rgba(228, 74, 26, 0.8);
  border: 2px solid rgba(255, 255, 255, 0.5);
  border-radius: 15px;
  font-size: 1.2em !important;
}

button:hover {
  background: rgba(228, 74, 26);
  border: 2px solid rgba(255, 255, 255);
}

